--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="style/style.scss">
     <title>Document</title>
 </head>
 <body>
     <h1>I am a starting point</h1>
-    <script src="index.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
