--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div id=container>
     <h1>I am a starting point</h1>
+</div>
     <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
