placed css, html, js

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.scss">
+    <link rel="stylesheet" href="Style/style.scss">
     <title>Document</title>
 </head>
 <body>
-    <div id=container>
-    <h1>I am a starting point</h1>
+    <div class="introduction">Test your knowledge on how many Pokémon you know!</div>
+    <div id="container">
 </div>
-    <script type="module" src="scripts/index.js"></script>
+<div class="copyright">©TarasovAndWuFoundation</div>
+    <script type="module" src="Scripts/index.js"></script>
 </body>
 </html>
