Fixed some formatting stuff

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,16 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style/style.scss">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Style/style.scss" />
     <title>Document</title>
-</head>
-<body>
-    <div class="introduction">Test your knowledge on how many Pokémon you know!</div>
-    <div id="container">
-</div>
-<div class="copyright">©TarasovAndWuFoundation</div>
+  </head>
+  <body>
+    <div class="introduction">
+      Test your knowledge on how many Pokémon you know!
+    </div>
+    <div id="container"></div>
+    <div class="copyright">©TarasovAndWuFoundation</div>
     <script type="module" src="Scripts/index.js"></script>
-</body>
+  </body>
 </html>
